Avoid copying collections of NodeIds and ContentIds #9820